--- a/vente_flash_expresso_mobile.html
+++ b/vente_flash_expresso_mobile.html
@@ -68,7 +68,7 @@
 					<!--EXEMPLE-->
 					<div class="segment exemple">
 						<div id="exemple">
-							Exemple pour un crédit Expresso<sup>(1)</sup> de 5 000 € sur 48 mois : Taux débiteur annuel fixe de 2,47 % soit <strong>TAEG fixe de 2,50 %. Mensualité : 109,50 €</strong> (hors assurance DIT<sup>(2)</sup> facultative). <strong>Montant total dû</strong> (hors assurance DIT <sup>(2)</sup> facultative) : <strong>5 256,00 €</strong> (avec frais de dossier offerts). <strong>Un crédit vous engage et doit être remboursé. Vérifiez vos capacités de remboursement avant de vous engager.</strong> En cas d’adhésion à l’assurance DIT<sup>(2)</sup> facultative, cotisation de 3,25 € par mois, à ajouter à l’échéance de crédit. Montant total dû au titre de l’assurance DIT facultative : 156 € soit un TAEA (taux annuel effectif de l’assurance) de 1,51 %, non inclus dans le TAEG du crédit. Conditions en vigueur du 12/12/2016 au 20/12/2016. Pour un crédit d’une autre durée et/ou montant, contactez votre Conseiller.
+							Exemple pour un crédit Expresso<sup>(1)</sup> de 5 000 € sur 48 mois : Taux débiteur annuel fixe de 2,47 % soit <strong>TAEG fixe de 2,50 %. Mensualité : 109,50 €</strong> (hors assurance DIT<sup>(2)</sup> facultative). <strong>Montant total dû</strong> (hors assurance DIT<sup>(2)</sup> facultative) : <strong>5 256,00 €</strong> (avec frais de dossier offerts). <strong>Un crédit vous engage et doit être remboursé. Vérifiez vos capacités de remboursement avant de vous engager.</strong> En cas d’adhésion à l’assurance DIT<sup>(2)</sup> facultative, cotisation de 3,25 € par mois, à ajouter à l’échéance de crédit. Montant total dû au titre de l’assurance DIT facultative : 156 € soit un TAEA (taux annuel effectif de l’assurance) de 1,51 %, non inclus dans le TAEG du crédit. Conditions en vigueur du 12/12/2016 au 20/12/2016. Pour un crédit d’une autre durée et/ou montant, contactez votre Conseiller.
 						</div>
 					</div>
 
@@ -103,8 +103,8 @@
 								<div>
 									<dl class="mentions">
 										<dt>Réservé aux majeurs, sous réserve d’acceptation de votre dossier par le prêteur Sogéfinancement SAS, 394 352 272 RCS Nanterre. Délai légal de rétractation : 14 jours à compter de votre acceptation du crédit.</dt>
-										<dt>Réservé aux majeurs, sous réserve d’acceptation de votre dossier par le prêteur Sogéfinancement SAS, 394 352 272 RCS Nanterre. Délai légal de rétractation : 14 jours à compter de votre acceptation du crédit.<br>
-											Afin d’obtenir des informations sur la convention AERAS (s’Assurer et Emprunter avec un Risque Aggravé de Santé), nous mettons à votre disposition le numéro de téléphone suivant : 01 42 14 31 69, du lundi au vendredi de 8h30 à 17h30 (service gratuit).</dt>
+										<dt>Le coût de l'assurance varie en fonction de l'âge et de la situation personnelle de l'emprunteur. Contrat d’assurance collective, Décès - Perte Totale et Irréversible d'Autonomie – Invalidité permanente - Incapacité temporaire totale de travail, souscrit par Sogéfinancement auprès de Sogécap (entreprise régie par le Code des assurances) et présenté par Société Générale, dont le siège social est situé 29, boulevard Haussmann (Paris IXe), en sa qualité d'Intermédiaire en assurances, immatriculation ORIAS n° 07 022 493 (orias.fr).<br>
+											Afin d’obtenir des informations sur la convention AERAS (s’Assurer et Emprunter avec un Risque Aggravé de Santé), nous mettons à votre disposition le numéro de téléphone suivant : 01 42 14 31 69, du lundi au vendredi de 8h30 à 17h30 (service gratuit).</dt>
 										<dt>La simulation ne revêt aucun caractère contractuel.</dt>
 										<dt class="asterisk">De 8h à 22h en semaine et jusqu’à 20h le samedi. Depuis l’étranger +33 (0) 8 10 01 3955. Tarif au 01/06/2016.</dt>
 
@@ -133,7 +133,7 @@
 
 
 
-					
+
 
 
 
